# auto-backup

./: .gitignore  LICENSE  README.md  auto-backup.py  auto_backup.py  pyproject.toml  setup.py
.github/workflows/: test-and-lint.yml  update-dependencies.yml
auto_backup/: __init__.py  argument_assigner.py  config.py  notifications.py  tasks.py  xmpp_notifications.py
tests/: test_assign_arguments_to_self.py  test_commands.py  test_config.py  test_config_injection.py  test_main_creation.py  test_notification.py  test_notification_formating.py  test_program_setup.py  test_safe_execute.py  test_task.py  test_task_config_merger.py  test_task_factory.py  test_task_list.py  test_task_list_execution.py
