[tool.poetry]
name = "auto-backup"
version = "0.1.0"
description = "Automate private backup tasks using a TOML configuration"
authors = ["Thomas Himmelstoss"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aioxmpp = ">=0.10.5"
toml = ">=0.10.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-isort = "*"
pytest-black = "*"
black = {version = "*", allow-prereleases = true}

[tool.poetry.scripts]
autobkp = "auto_backup:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --black --isort -q -W ignore::DeprecationWarning"

[tool.coverage.run]
source = ["auto_backup"]

[tool.isort]
profile = "black"
